fixed top logged in profile right margin to align with the rest of the app

--- a/assets/styles/maximize.sass
+++ b/assets/styles/maximize.sass
@@ -17,4 +17,4 @@
     @include border-bottom-left-radius(4px)
 
 #top .profile
-  margin-right: 50px
+  margin-right: 15px
